deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  docker
  namespace: sknamespace
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  dotnetdemo-myapp-1
        image: dockerregister1.azurecr.io/dotnetdemo-myapp
        resources:
          requests:
            cpu:  100m
            memory: 300Mi
          limits:
            cpu: 200m
            memory: 300Mi
        livenessProbe:
          exec:
            command:
            - ls
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - ls
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  5000
      imagePullSecrets:
      - name: sk 
          name: sk
        imagePullPolicy: Always
      restartPolicy: Always
