deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker
  namespace: sk
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp
    spec:
    affinity:  # Add the 'affinity' section to specify node affinity
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: agentpool
                    operator: In
                    values:
                      - node1
      
        podAntiAffinity:  # 'podAntiAffinity' is correctly placed within the 'affinity' section
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - myapp
                topologyKey: topology.kubernetes.io/zone
        containers:
        - name: dotnetdemo-myapp-1
          image: dockerregister1.azurecr.io/dotnetdemo-myapp
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "100Mi"
              memory: "100Mi"
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 5000
        imagePullSecrets:
        - name: sk
