service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: sk
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
