ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: sk   # Replace 'your-namespace' with the desired namespace name
  annotations:
    # Add annotations here if needed
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - bermtec.com
    secretName: my-tls-secret
  rules:
  - host: bermtec.com
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: dotnetdemoservice
            port:
              number: 80
