network-policy.yaml
# network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-myapp-access
  namespace: sk
spec:
  podSelector:
    matchLabels:
      app: myapp
  ingress:
  - {}
